--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -5,6 +5,6 @@
 # below each fixture, per the syntax in the comments below
 #
 one:
-  email: user_1@example.ecom
+  email: user_1@example.com
   encrypted_password: <%= Devise::Encryptor.digest(User, 'password') %>
   confirmed_at: <%= Time.now %>
