--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
+    "@yaireo/tagify": "^3.6.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "clipboard": "^2.0.6",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
