--- a/test/fixtures/tasks.yml
+++ b/test/fixtures/tasks.yml
@@ -1,9 +1,12 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+<% 1.upto(1) do |i| %>
+task_<%= i %>:
+  title: <%= Faker::Lorem.sentence %>
+  user: user_1
+<% end %>
 
-one:
-  title: MyString
-  user: one
-
-two:
-  title: MyString
-  user: two
+<% 2.upto(2) do |i| %>
+task_<%= i %>:
+  title: <%= Faker::Lorem.sentence %>
+  user: user_2
+<% end %>
