--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "version": "0.1.0",
   "devDependencies": {
     "webpack-dev-server": "^3.10.3"
+  },
+  "engines": {
+    "node": "12.16.x",
+    "yarn": "1.x"
   }
 }
