Refactor model validations to account for user plan.

--- a/test/fixtures/plans.yml
+++ b/test/fixtures/plans.yml
@@ -1,13 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  notes_limit: 1
-  tasks_limit: 1
-  reminders_limit: 1
-
-two:
-  name: MyString
-  notes_limit: 1
-  tasks_limit: 1
-  reminders_limit: 1
+  name: Free
+  notes_limit: 500
+  tasks_limit: 100
+  reminders_limit: 25
