--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: ruby
+cache:
+- bundler
+- yarn
 before_install:
-  - nvm install --lts
+  - nvm install 12.16
 services:
   - postgresql
 script:
