--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,11 @@ before_install:
   - nvm install 12.16
 services:
   - postgresql
+  - redis-server
 script:
   - bundle install --jobs=3 --retry=3
   - yarn
-  - bundle exec rake db:setup
+  - bundle exec rake db:create
+  - bundle exec rake db:migrate
   - bundle exec rake test
   - bundle exec rake test:system
