--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ script:
   - bundle install --jobs=3 --retry=3
   - yarn
   - bundle exec rake db:create
-  - bundle exec rake db:migrate
+  - bundle exec rake db:schema:load
   - bundle exec rake test
   - bundle exec rake test:system
