--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "simplemde": "^1.11.2",
     "sortablejs": "^1.10.2",
     "stimulus": "^1.1.1",
     "turbolinks": "^5.2.0"
