--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,15 @@ language: ruby
 cache:
   - bundler
   - yarn
-before_install:
-  - nvm install 12.16
 services:
   - postgresql
-  - redis-server
-script:
+before_install:
+  - nvm install 12.16
+before_script:
   - bundle install --jobs=3 --retry=3
   - yarn
   - bundle exec rake db:create
-  - bundle exec rake db:schema:load
+  - bundle exec rake db:schema:load  
+script:
   - bundle exec rake test
   - bundle exec rake test:system
