--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
 - postgresql
 - redis-server
 before_install:
-- nvm install 12.16
+- nvm install --lts
 before_script:
 - bundle install --jobs=3 --retry=3
 - yarn
