--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "simplemde": "^1.11.2",
     "sortablejs": "^1.10.2",
     "stimulus": "^1.1.1",
+    "tailwindcss": "^1.4.6",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
