--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
     "@yaireo/tagify": "^3.6.2",
+    "alpinejs": "^2.4.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "clipboard": "^2.0.6",
     "prop-types": "^15.7.2",
