--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
+    "@tailwindcss/typography": "^0.2.0",
     "@tailwindcss/ui": "^0.3.0",
     "@yaireo/tagify": "^3.6.2",
     "alpinejs": "^2.4.1",
